--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 /.idea/caches/build_file_checksums.ser
 /.idea/libraries
 /.idea/modules.xml
-/.idea/workspace.xml
+/.idea/workspace.xm
+/.idea
 .DS_Store
 /build
 /captures
