--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     implementation "org.koin:koin-android:1.0.2"
     implementation "org.koin:koin-androidx-scope:1.0.2"
     implementation "org.koin:koin-androidx-viewmodel:1.0.2"
+
+    implementation "com.redmadrobot:inputmask:4.0.0"
 }
