--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,5 @@ dependencies {
     implementation "org.koin:koin-androidx-viewmodel:1.0.2"
 
     implementation "com.redmadrobot:inputmask:4.0.0"
+    implementation "com.jakewharton.timber:timber:4.7.1"
 }
