--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.0.0"
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
 
+    implementation "android.arch.navigation:navigation-fragment:1.0.0-alpha09"
+    implementation "android.arch.navigation:navigation-ui:1.0.0-alpha09"
+
     implementation "com.google.code.gson:gson:2.8.5"
 
     implementation "com.squareup.retrofit2:retrofit:2.4.0"
