--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,14 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'key0'
+            keyPassword 'notapassword'
+            storeFile file('/home/rtviwe/tport.jks')
+            storePassword 'notapassword'
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId 'com.lod.rtviwe.t_port'
@@ -29,48 +37,35 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.0"
-
-    testImplementation "junit:junit:4.12"
-    androidTestImplementation "androidx.test:runner:1.1.1"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.1.1"
-
-    implementation "androidx.constraintlayout:constraintlayout:2.0.0-alpha3"
-    implementation "androidx.recyclerview:recyclerview:1.0.0"
-
-    implementation "com.google.android.material:material:1.0.0"
-
-    implementation "androidx.core:core-ktx:1.0.1"
-    implementation "androidx.fragment:fragment-ktx:1.0.0"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
-
-    implementation "androidx.room:room-runtime:2.1.0-alpha03"
-    implementation "androidx.room:room-coroutines:2.1.0-alpha03"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.0'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.core:core-ktx:1.0.1'
+    implementation 'androidx.fragment:fragment-ktx:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.room:room-runtime:2.1.0-alpha03'
+    implementation 'androidx.room:room-coroutines:2.1.0-alpha03'
     kapt "androidx.room:room-compiler:2.1.0-alpha03"
-
-    implementation "com.google.code.gson:gson:2.8.5"
-
-    implementation "com.squareup.retrofit2:retrofit:2.4.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.4.0"
-    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
-
-    implementation "com.github.bumptech.glide:glide:4.8.0"
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor "com.github.bumptech.glide:compiler:4.8.0"
-
-    implementation "org.koin:koin-core:1.0.2"
-    implementation "org.koin:koin-android:1.0.2"
-    implementation "org.koin:koin-androidx-scope:1.0.2"
-    implementation "org.koin:koin-androidx-viewmodel:1.0.2"
-
-    implementation "com.redmadrobot:inputmask:4.0.0"
-
-    implementation "com.jakewharton.timber:timber:4.7.1"
-
-    implementation "com.xwray:groupie:2.3.0"
-    implementation "com.xwray:groupie-kotlin-android-extensions:2.3.0"
+    implementation 'org.koin:koin-core:1.0.2'
+    implementation 'org.koin:koin-android:1.0.2'
+    implementation 'org.koin:koin-androidx-scope:1.0.2'
+    implementation 'org.koin:koin-androidx-viewmodel:1.0.2'
+    implementation 'com.redmadrobot:inputmask:4.0.0'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation 'com.xwray:groupie:2.3.0'
+    implementation 'com.xwray:groupie-kotlin-android-extensions:2.3.0'
 }
