--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,9 +10,9 @@ android {
     signingConfigs {
         config {
             keyAlias 'key0'
-            keyPassword 'placeholderKeyPassword'
+            keyPassword 'NDjRcZz9LkyR7G37DkuYKbSvfs7tSpWPDcGBaWPdLzSzHGJv8mMKpet95jqrBksE'
             storeFile file('/home/rtviwe/tport.jks')
-            storePassword 'placeholderStorePassword'
+            storePassword 'nABv4QQP9DBZYBjSmjWddUKWGpGP4tzRLwUJKR4XH7ggMQNQ3sN4XuzY7qJx5cVd'
         }
     }
     compileSdkVersion 28
@@ -45,7 +45,6 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.0'
     testImplementation 'junit:junit:4.12'
