--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,5 @@ kotlin.code.style=official
 
 android.enableJetifier=true
 android.useAndroidX=true
+android.enableR8=true
+android.debug.obsoleteApi=true
