--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 *.iml
 .gradle
 /local.properties
+/secret.properties
+secret.properties
 /.idea/caches/build_file_checksums.ser
 /.idea/libraries
 /.idea/modules.xml
